evaluations/evaluation1/RapideTest.java.txt
./allumettes/RapideTest.java:13: error: no suitable constructor found for Joueur(boolean,String,String)
        Joueur j2 = new Joueur(true,"rapide","Joueur 2");
                    ^
    constructor Joueur.Joueur() is not applicable
      (actual and formal argument lists differ in length)
    constructor Joueur.Joueur(String,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Joueur.Joueur(boolean,String) is not applicable
      (actual and formal argument lists differ in length)
./allumettes/RapideTest.java:20: error: cannot find symbol
        int a = this.arb.j1.getPrise();
                        ^
  symbol:   variable j1
  location: variable arb of type Arbitre
./allumettes/RapideTest.java:35: error: cannot find symbol
		assertEquals(this.arb.j1.getPrise(), Math.max(1, this.jeu.getNombreAllumettes() - 1));
		                     ^
  symbol:   variable j1
  location: variable arb of type Arbitre
3 errors
